--- a/no-crawl-email.html
+++ b/no-crawl-email.html
@@ -8,24 +8,25 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body>
-	<div>This is a demo of displaying your email address as html to your visitors</div>
+	<div>This is a demo to display your email address as html to your visitors</div>
 	<div id="mail_as_text">Email: [Refresh]</div>
 	
-	<div style="height: 20px;">&nbsp;</div>
+	<div style="height: 120px;">&nbsp;</div>
 
 	<div>This is a demo of displaying your email as clickable working email address</div>
-	<div><a id="mail_as_href" href="[refresh]">Click to Email</a></div>
+	<div><a id="mail_as_href" href="[refresh]">Click to send email</a></div>
 
-	<div style="height: 20px;">&nbsp;</div>
-	<div>on GITHUB </div>
+	<div style="height: 120px;">&nbsp;</div>
+	<div>See the webpage source code and look for the email address. You'll see there is no email address in this page, but your site visitors can use the email address without any issue.<br />
+	available on github as <a href="https://github.com/adityamilan/no-crawl-email">no-crawl-email</a></div>
 
   <script>
   $(document).ready(function() {
-    // Suppose you have email address, name@fakedomain.com and you want
+    // Suppose you have email address, user@sampledomain.com and you want
     // to show this to your site visitors but do not want it to get crawled by bots.
     // Now simply put your email address like this
 
-    __eml_adr = 'name#fakedomain%com'.replace('#','@').replace('%','.');
+    __eml_adr = 'user#sampledomain%com'.replace('#','@').replace('%','.');
     // This is very basic encryption just to present proof of concept but you
     // can increse the security by using more complext way to cypher and then
     // decypher it using custom javascript functions insted of replace function.
